# argentina-legal-data-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  CREDITS.md  Caddyfile  DECISIONS.md  Dockerfile  EVALS.md  LICENSE  NOTICE  README.md  STATUS.md  docker-compose.yml  pyproject.toml
data/: tipos_norma.json
docs/: casos-de-uso.md
scripts/: deploy-vps.sh  update_configs.py
secrets/: api-keys.json.example
src/arg_legal_mcp/: __init__.py  __main__.py  config.py  disclaimer.py  health.py  http_app.py  prompts.py  scripts_update_configs.py  server.py  tools_common.py  tools_infoleg.py  tools_search_fetch.py
src/arg_legal_mcp/auth/: __init__.py  api_keys.py  middleware.py
src/arg_legal_mcp/infoleg/: __init__.py  anexos.py  backend.py  cache.py  catalogs.py  client.py  dataset.py  dataset_pg.py  models.py  parsers.py  services.py  session.py
src/arg_legal_mcp/sources/: __init__.py  afip.py  base.py  bcra.py  boletin.py  dolar.py  feriados.py  indec.py  register.py  tributaria.py
systemd/: argentina-legal-data-mcp-dataset.service  argentina-legal-data-mcp-dataset.timer  argentina-legal-data-mcp.service
tests/: fixtures.py  test_anexos.py  test_auth.py  test_backend.py  test_dataset.py  test_no_50k_range.py  test_parsers.py  test_search_fetch.py  test_services_live.py  test_sources.py
