[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argentina-legal-data-mcp"
version = "0.1.0"
description = "A first-class MCP server for Argentine public data, with deep coverage of national legislation (InfoLEG)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Argentina Legal & Data MCP authors" }]
keywords = ["mcp", "infoleg", "argentina", "legislacion", "boletin-oficial"]

dependencies = [
    "mcp[cli]>=1.6",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdownify>=0.13",
    "rapidfuzz>=3.6",
    "diskcache>=5.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
http = ["starlette>=0.37", "uvicorn>=0.30"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
argentina-legal-data-mcp = "arg_legal_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arg_legal_mcp = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["_reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "E501",   # line length: long docstrings/SQL are intentional
    "UP042",  # (str, Enum) is idiomatic for pydantic; StrEnum changes str() semantics
]

[tool.ruff.lint.isort]
known-first-party = ["arg_legal_mcp"]
